--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                         <div class="card">
                             <img class="card-img-top" src="https://cdn.images.dailystar.co.uk/dynamic/122/photos/98000/900x738/885098.jpg" alt="">
                             <div class="card-body">
-                                <h4 class="card-title">World Record</h4>
+                                <h4 class="card-title">World <span>RECORD</span></h4>
                                 <p class="card-subtitle text-muted">Design</p>
                             </div>
                         </div>
